--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   },
   "devDependencies": {
